Hire Me colore add

--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
         <UL>
             <li><a href="">Portfolio</a></li>
             <li><a href="">Blog</a></li>
-            <li><a href="">Hire Me</a></li> 
+            <li><button class="btn-primary">Hire Me
+            </button></li> 
         </UL>        </nav>
 
     </header>
