--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="style.css/portfolio.css">
 </head>
 <body>
-    <header>
+    <header class="header">
         <nav>
             <h3 class="nav-title">ROFI<span class="text-primary">Q</span></h3>
         <UL>
@@ -20,6 +20,17 @@
             <li><button class="btn-primary">Hire Me
             </button></li> 
         </UL>        </nav>
+        <div class="banner">
+            <div class="banner-content">
+                <h3 class="banner -greeting">Hi I am </h3>
+                <h1 class="banner-title">ROFIQ</h1>
+                <P>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fugiat, quibusdam.
+                </P>
+                <button class="btn-primary">Download CV</button>    <button class="btn-primary">Contact</button>
+            </div>
+            <img class="profile-pic" src="image/my pic.jpg" alt="">
+        </div>
+
 
     </header>
     <main>
