--- a/index.html
+++ b/index.html
@@ -22,13 +22,16 @@
         </UL>        </nav>
         <div class="banner">
             <div class="banner-content">
-                <h3 class="banner -greeting">Hi I am </h3>
+                <h3 class="banner -greeting"> Hi, I am </h3>
                 <h1 class="banner-title">ROFIQ</h1>
                 <P>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fugiat, quibusdam.
                 </P>
-                <button class="btn-primary">Download CV</button>    <button class="btn-primary">Contact</button>
+                <button class="btn-primary">Download CV
+
+                </button>    
+                <button class="btn-primary">Contact</button>
             </div>
-            <img class="profile-pic" src="image/my pic.jpg" alt="">
+            <img class="profile-pic" src="image/sakin-removebg.png" alt="">
         </div>
 
 
