add background color

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <div class="banner-content">
                 <h3 class="banner -greeting"> Hi, I am </h3>
                 <h1 class="banner-title">ROFIQ</h1>
-                <P>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fugiat, quibusdam.
+                <P class="banner-discription">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fugiat, quibusdam.
                 </P>
                 <button class="btn-primary">Download CV
 
@@ -37,6 +37,10 @@
 
     </header>
     <main>
+        <section class="about">
+            <h3 class="section-title">About Me</h3>
+            <p class="section-description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quas hic nostrum perspiciatis omnis in sequi exercitationem. Optio, facilis placeat consequatur quidem maiores numquam sed officiis, provident temporibus suscipit voluptas Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus nam architecto assumenda sit, hic similique? Et illum officia at voluptatibus aut temporibus amet nesciunt soluta. Nulla numquam culpa rerum dolores.</p>
+        </section>
 
     </main>
     <footer>
